update code crawl odd of event to analyst